fix: add gap between navbar menu and language selector

--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -46,6 +46,7 @@
     display: flex;
     gap: 1.5rem;
     margin-left: 50px;
+    margin-right: 50px;
 }
 
 .link {
